// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column /> should match the snapshot (no properties set) 1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
}

<div
  className="c0"
/>
`;

exports[`<Column /> should match the snapshot (order property set to { xs: 'first', sm: 3, md: 'last' })  1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-box-ordinal-group: 0;
  -ms-flex-order: -1;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

@media (min-width:576px) {
  .c0 {
    -webkit-box-ordinal-group: 3;
    -ms-flex-order: 2;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-box-ordinal-group: 13;
    -ms-flex-order: 12;
    -webkit-order: 12;
    -ms-flex-order: 12;
    order: 12;
  }
}

<div
  className="c0"
  order={
    Object {
      "md": "last",
      "sm": 3,
      "xs": "first",
    }
  }
/>
`;

exports[`<Column /> should match the snapshot (order property set to 3 size property is set 9) 1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-box-ordinal-group: 3;
  -ms-flex-order: 2;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-box-flex: 0;
  -ms-flex: 0 0 75.000000%;
  -webkit-flex: 0 0 75.000000%;
  -ms-flex: 0 0 75.000000%;
  flex: 0 0 75.000000%;
  max-width: 75.000000%;
}

<div
  className="c0"
  order={3}
  size={9}
/>
`;

exports[`<Column /> should match the snapshot (order property set to 5)  1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-box-ordinal-group: 5;
  -ms-flex-order: 4;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

<div
  className="c0"
  order={5}
/>
`;

exports[`<Column /> should match the snapshot (order property set to 5)  2`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-box-flex: 0;
  -ms-flex: 0 0 58.333333%;
  -webkit-flex: 0 0 58.333333%;
  -ms-flex: 0 0 58.333333%;
  flex: 0 0 58.333333%;
  max-width: 58.333333%;
}

<div
  className="c0"
  size={7}
/>
`;

exports[`<Column /> should match the snapshot (size property set to { xs: 'auto', sm: 7, md: 'none' })  1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  -ms-flex-preferred-size: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
}

@media (min-width:576px) {
  .c0 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 58.333333%;
    -webkit-flex: 0 0 58.333333%;
    -ms-flex: 0 0 58.333333%;
    flex: 0 0 58.333333%;
    max-width: 58.333333%;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 auto;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    width: auto;
    max-width: none;
  }
}

<div
  className="c0"
  size={
    Object {
      "md": "none",
      "sm": 7,
      "xs": "auto",
    }
  }
/>
`;
